--- a/termproject/pom.xml
+++ b/termproject/pom.xml
@@ -145,6 +145,19 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.4</version>
         </dependency>
+        <!--bootstrap-->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>github-com-twbs-bootstrap</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+
+        <!--jquery-->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
     </dependencies>
 
