--- a/termproject/pom.xml
+++ b/termproject/pom.xml
@@ -158,6 +158,18 @@
             <artifactId>jquery</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>koreatech.cse</groupId>
+            <artifactId>wsc</artifactId>
+            <version>001</version>
+        </dependency>
+
+        <!--oauth2 client-->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>1.1.2.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
